--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.6",
+    "classnames": "^2.3.2",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5"
@@ -19,7 +20,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "14.0.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "typescript": "^5"
   }
 }
